--- a/packages/bitcoin-payments/package.json
+++ b/packages/bitcoin-payments/package.json
@@ -21,17 +21,57 @@
     "Dylan Seago <dylan@bitaccess.ca>"
   ],
   "license": "MIT",
+  "files": [
+    "dist/",
+    "src/"
+  ],
+  "engines": {
+    "node": ">=8.0.0"
+  },
   "scripts": {
-    "test": "mocha test/*.js --timeout 999999999"
+    "lint": "tslint --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "docs": "bin/docs.sh",
+    "prebuild": "rimraf dist && rimraf docs",
+    "build": "bin/build.sh",
+    "start": "rollup -c rollup.config.ts -w",
+    "test": "jest --runInBand --detectOpenHandles --bail",
+    "report-coverage": "cat ./coverage/lcov.info | coveralls",
+    "version": "npm run build && git add -Af dist docs"
   },
   "devDependencies": {
-    "async": "^2.6.1",
-    "chai": "^4.1.2",
-    "mocha": "^5.2.0",
-    "standard": "^11.0.1"
+    "@faast/ts-config": "^1.3.2",
+    "@types/bitcoinjs-lib": "^3.4.0",
+    "@types/jest": "^24.0.21",
+    "@types/node": "^10.17.3",
+    "@types/node-fetch": "^2.5.0",
+    "@types/promise-retry": "^1.1.3",
+    "@types/request-promise-native": "^1.0.17",
+    "coveralls": "^3.0.2",
+    "jest": "^24.9.0",
+    "jest-circus": "^24.9.0",
+    "jest-config": "^24.9.0",
+    "lint-staged": "^8.0.0",
+    "node-fetch": "^2.6.0",
+    "prettier": "^1.14.3",
+    "rimraf": "^2.6.2",
+    "rollup": "^1.26.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-node-resolve": "^4.2.4",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-typescript2": "^0.24.3",
+    "ts-jest": "^24.1.0",
+    "ts-node": "^8.4.1",
+    "tslint": "^5.20.0",
+    "typedoc": "^0.15.0",
+    "typescript": "^3.7.2"
   },
   "dependencies": {
+    "@faast/payments-common": "^0.17.6",
+    "@faast/ts-common": "^0.6.0",
     "bitcoinjs-lib": "3.3.2",
-    "request": "^2.87.0"
+    "io-ts": "^1.10.4",
+    "request-promise-native": "^1.0.8"
   }
 }
