--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
       "@faast/ts-common": ["node_modules/@faast/ts-common"],
       "@faast/payments-common": ["../payments-common/src", "node_modules/@faast/payments-common"],
       "@faast/*-payments": ["../*-payments/src", "node_modules/@faast/*-payments"]
-    }
+    },
+    "strict": true,
   }
 }
