--- a/packages/bitcoin-payments/package.json
+++ b/packages/bitcoin-payments/package.json
@@ -72,6 +72,7 @@
     "@faast/ts-common": "^0.6.0",
     "bitcoinjs-lib": "3.3.2",
     "io-ts": "^1.10.4",
+    "lodash": "^4.17.15",
     "request-promise-native": "^1.0.8"
   }
 }
