--- a/packages/bitcoin-payments/tsconfig.json
+++ b/packages/bitcoin-payments/tsconfig.json
@@ -2,11 +2,7 @@
   "extends": "./../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "dist/lib",
-    "paths": {
-      "#/*": ["./src/*"],
-      "@faast/ts-common": ["node_modules/@faast/ts-common"],
-    }
+    "outDir": "dist/lib"
   },
   "exclude": ["node_modules", "dist"]
 }
