--- a/packages/bitcoin-payments/package.json
+++ b/packages/bitcoin-payments/package.json
@@ -46,6 +46,7 @@
     "@types/node": "^10.17.3",
     "@types/node-fetch": "^2.5.0",
     "@types/promise-retry": "^1.1.3",
+    "@types/qs": "^6.9.0",
     "@types/request-promise-native": "^1.0.17",
     "coveralls": "^3.0.2",
     "jest": "^24.9.0",
@@ -73,6 +74,7 @@
     "bitcoinjs-lib": "3.3.2",
     "io-ts": "^1.10.4",
     "lodash": "^4.17.15",
+    "qs": "^6.9.1",
     "request-promise-native": "^1.0.8"
   }
 }
