--- a/packages/bitcoin-payments/package.json
+++ b/packages/bitcoin-payments/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@faast/ts-config": "^1.3.2",
+    "@types/bs58": "^4.0.1",
     "@types/jest": "^24.0.21",
     "@types/node": "^10.17.3",
     "@types/node-fetch": "^2.5.0",
@@ -72,6 +73,7 @@
     "@faast/ts-common": "^0.6.0",
     "bitcoinjs-lib": "^5.1.7",
     "blockbook-client": "^0.3.5",
+    "bs58": "^4.0.1",
     "io-ts": "^1.10.4",
     "lodash": "^4.17.15",
     "qs": "^6.9.1",
